--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+# Pre installation informations
+- name: APT generic installation
+  tags: preinstall
+  ansible.builtin.import_tasks:
+    file: src/pre-install.yaml
+  become_user: root
+
 # APT generic installation: This updates, upgrades and install all generic linux apt deps.
 - name: APT generic installation
   tags: apt_generic
@@ -16,11 +23,11 @@
 - name: Git configuration
   tags: git
   ansible.builtin.import_tasks: src/gitconf.yaml
-  become_user: root
 
 # Terminal installation and settings
 - name: Terminal installation and configuration
   tags: terminal
+  become_user: root
   ansible.builtin.import_tasks: src/terminal.yaml
 
 # Julia environment (LTS and ODBC drivers)
