--- a/roles/user/tasks/src/docker.yaml
+++ b/roles/user/tasks/src/docker.yaml
@@ -22,7 +22,7 @@
 
 - name: Add docker repository
   apt_repository:
-    repo: deb [signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu jammy stable
+    repo: deb [signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu noble stable
     state: present
 
 - name: Install docker dependencies
