--- a/roles/user/tasks/src/docker.yaml
+++ b/roles/user/tasks/src/docker.yaml
@@ -48,7 +48,7 @@
 
 - name: add user to docker group
   ansible.builtin.user:
-    name: "{{ USERNAME }}"
+    name: "{{ USER }}"
     groups: docker
     append: yes
 
