--- a/roles/user/tasks/src/postinstall.yaml
+++ b/roles/user/tasks/src/postinstall.yaml
@@ -6,5 +6,6 @@
 
 - name: Clear installation files
   ansible.builtin.file:
-    path: "{{ TEMP_DIR }}"
+    path: "{{ USER_TEMP_DIR }}"
     state: absent
+  become_user: root
